third_party/move/move-compiler-v2/tests/checking/specs/structs_err.exp

Diagnostics:
error: field `xx` not declared in struct `S`
   ┌─ tests/checking/specs/structs_err.move:26:7
   │
26 │       s.xx
   │       ^

error: expected `bool` but found a value of type `u64`
   ┌─ tests/checking/specs/structs_err.move:31:7
   │
31 │       s.x
   │       ^^^

error: expected `bool` but found a value of type `u64`
   ┌─ tests/checking/specs/structs_err.move:36:18
   │
36 │       S{x: x, y: y, z: z}
   │                  ^

error: missing fields `y`, `z`
   ┌─ tests/checking/specs/structs_err.move:40:7
   │
40 │       S{x: x}
   │       ^^^^^^^

error: expected `bool` but found a value of type `u64`
   ┌─ tests/checking/specs/structs_err.move:45:12
   │
45 │       G{x: x, y: y}
   │            ^

error: expected 1 type argument but 2 were provided
   ┌─ tests/checking/specs/structs_err.move:50:7
   │
50 │       G<u64, bool>{x: x, y: y}
   │       ^
